--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="images/Cedoi.jpg" alt="CedoiPicture" width="200px"></td>
+      <td><img src="Cedoi.jpg" alt="CedoiPicture" width="200px"></td>
       <td>
         <h1>Celdorf Buling</h1>
         <p><em>Web Developer / Javascript Developer</em></p>
